package org.stooda.model;

public class Alternative {
    private String description;
    private String imagePath;
    private Boolean correct;
}
