package org.stooda.model;

public class Area {
    private String description;
}
